@@ -1,8 +1,6 @@
 Before final 7.0.0
 ==================
 
- * Update C API
-
  * Create release notes
 
  * See if the error message that gets generated when retrying a stream
