@@ -297,3 +297,7 @@ QPDFWriter ignore self-referential object stream 0
 QPDFObjectHandle found old angle 1
 QPDF_Stream special filters 3
 QPDFTokenizer block long token 0
+qpdf-c called qpdf_set_decode_level 0
+qpdf-c called qpdf_set_compress_streams 0
+qpdf-c called qpdf_set_preserve_unreferenced_objects 0
+qpdf-c called qpdf_set_newline_before_endstream 0
