@@ -1,3 +1,12 @@
+2017-09-12  Jay Berkenbilt  <ejb@ql.org>
+
+	* Add new methods to the C API to correspond to new additions to
+	QPDFWriter:
+	- qpdf_set_compress_streams
+	- qpdf_set_decode_level
+	- qpdf_set_preserve_unreferenced_objects
+	- qpdf_set_newline_before_endstream
+
 2017-08-25  Jay Berkenbilt  <ejb@ql.org>
 
 	* Re-implement parser iteratively to avoid stack overflow on very
